		Planner: added ability to set units to inactive, to hide them from certain views
		School Admin: changed "Spaces" to "Facilities" and integrated borrowable Library items into Booking (to support laptop carts)
		Staff: added ability to manage contract information
		User Admin: added bulk import of user photos from a zip file

	Security
		System: converted links to GNU GPL to HTTPS
		System: converted links to Gibbon website to HTTPS
		System: prevented non-login access to preferences

	Tweaks & Bug Fixes
		System: Added Danish, Persian, Brazilian Portugese, Dutch, Georgian and Hungarian as development languages
		System: improved MIME type checking on CSV import
		System: fixed Google login PHP warnings
		System: fixed login PHP warning
		System: fixed typo in name of behaviour CLI script
		System: fixed non-standard port bug in installer (caused incorrect value to be set for absoluteURL)
		System: added Pakistani Rupee, Tanzania Shilling, Jamaican Dollar and Macanese Pataca as currencies
		System: added a password generator to new password setting fields
		System: updated jquery autosize library, to fix Chrome's disappearing textareas
		System: replaced many instances of style=, moving minor styles into CSS (long over due)
		System: updated jQuery to v2.2.3
		System: themeability enhancements
		System: added menuShow switch to allow actions to be hidden from the main menu (in case they should only be seen in a hook)
		System: added Ghanaian Cedi, Myanmar Kyat as currencies
		System Admin: Improved version comparison in module updater
		System Admin: Improved version comparison in non-login database updater
		System Admin: fixed error when removing module with no $moduleTables in manifest.php
		Activities: fixed error in adding and editing activities when payment is turned off
		Attendance: added client side warning in case attendance is taken for a day in the past (happens when user not logged out over night)